--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -156,7 +156,7 @@ header.header {
     right: 0;
     span {
       top: 5px;
-      display: block;
+      display: inline-block;
       float: left;
       margin-left: 30px;
       width: 150px;
