--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,6 +1,28 @@
-<div class="contents row">
-  <% @tweets.each do |tweet| %>
-    <%= render partial: "tweet", locals: {tweet: tweet} %>
-  <% end %>
-  <%= paginate(@tweets) %>
-</div>
+<!DOCTYPE html>
+<html lang="js">
+
+<body>
+
+  <div class="container">
+
+    <header class="jumbotron my-3">
+      <h1 class="display-6">ようこそMeL-boothへ<br /></h1>
+      <p class="lead">商品にコメント</p>
+    </header>
+
+    <div class="col-lg-3 col-md-6 mb-4">
+      <div class="row text-center">
+        <div class="card-body">
+          <% @tweets.each do |tweet| %>
+            <%= render partial: "tweet", locals: {tweet:tweet} %>
+          <% end %>
+          <%= paginate(@tweets) %>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</body>
+
+</html>
