--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,9 +5,9 @@
 
   <div class="container">
 
-    <header class="jumbotron my-3">
-      <h1 class="display-6">ようこそMeL-boothへ<br /></h1>
-      <p class="lead">商品にコメント</p>
+    <header class="jumbotron">
+      <h1 class="display-7">ようこそMeL-boothへ<br /></h1>
+      <p class="lead">商品にコメントよろしく〜</p>
     </header>
 
     <div class="col-lg-3 col-md-6 mb-4">
