--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <meta charset="utf-8">
@@ -22,6 +22,8 @@
   <!-- Custom styles for this template -->
   <link href="app/stylesheets/heroic-features.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+
   <nav class="navbar navbar-expand-lg navbar-light  bg-info fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">MeL-booth</a>
@@ -32,6 +34,11 @@
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
             <div class="d-flex">
+            <li class="nav-item mx-2">
+                <button type="button" class="btn btn-outline-light bg-light">
+                  <%= link_to  "トップに戻る", root_path %>
+                </button>
+              </li>
               <li class="nav-item mx-2">
                 <button type="button" class="btn btn-outline-light bg-light">
                   <%= link_to  "マイページ", user_path(current_user) %>
@@ -44,7 +51,7 @@
               </li>
               <li class="nav-item mx-2">
                 <button type="button" class="btn btn-outline-light bg-light">
-                  <%= link_to "新規投稿", new_tweet_path(current_user), method: :get %>
+                  <%= link_to "新規投稿", new_tweet_path %>
                 </button>
               </li>
             </div>
