--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,10 +1,18 @@
 <div class="contents row">
-  <%= form_with(url:"/tweets/#{@tweet.id}", :method => :patch) do |f| %>
-    <h3>
-      編集する
-    </h3>
-    <%= f.text_field :image,placeholder: "Image Url", type:"text", name:"image", autofocus: "true" %>
-    <%= f.text_area :text,placeholder: "text",name: "text", style: {cols: 30, rows: 10} %>
-    <%= f.submit "SENT" %>
-  <% end %>
+  <div class="jumbotron bg-light">
+    <%= form_with(url:"/tweets/#{@tweet.id}", :method => :patch,local: true) do |f| %>
+      <div class="form-group">
+        <h3 class="text-primary">
+          編集する
+        </h3>
+      </div>
+      <div class="form-group">
+        <%= f.text_field :image,placeholder: "Image Url", type:"text", name:"image", autofocus: "true" %>
+      </div>
+      <div class="form-group">
+        <%= f.text_area :text,placeholder: "text",name: "text", style: {cols: 30, rows: 10} %>
+      </div>
+      <%= f.submit "送信", class: 'text-light btn btn-primary btn-lg' %>
+    <% end %>
+  </div>
 </div>
