--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,13 +1,18 @@
 <div class="contents row">
-  <div class="container">
-    <%= form_with(model: @tweet, url: tweets_path, html: {method: :post}) do |f| %>
-      <h3>
+  <div class="jumbotron bg-light">
+    <%= form_with model: @tweet, local: true do |f| %>
+      <div class="form-group">
+        <h3 class="text-primary">
         新規投稿
-      </h3>
-      <div style ="margin: 8px 0">
-        <%= f.text_field :image, placeholder: 'image_url',type: 'text', name: 'image',value: '' %>
-        <%= f.text_area :text, placeholder: "text",name: 'text', style: {cols: 30, rows: 10} %>
-        <%= f.submit "SENT" %>
+        </h3>
+        <div class="form-group">
+          <%= f.text_field :image, placeholder: 'image_url',type: 'text', name: 'image',value: '' %>
+        </div>
+        <div class="form-group">
+          <%= f.text_area :text, placeholder: "text",name: 'text', style: {cols: 30, rows: 10} %>
+        </div>
+
+        <%= f.submit "送信", class: 'text-light btn btn-primary btn-lg' %>
       </div>
     <% end %>
   </div>
