--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,7 +1,7 @@
 <div class="content_post" style="background-image: url(<%= tweet.image %>);">
   <% if user_signed_in? && current_user.id = tweet.user_id %>
     <div class="more">
-      <ul class="more_list">
+      <ul class="more_list d-flex">
         <li>
           <%= link_to '詳細', "/tweets/#{tweet.id}",method: :get %>
         </li>
