--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,5 +1,5 @@
 <div class="contents row">
-  <div class="jumbotron bg-light">
+  <div class="jumbotron border-primary" >
     <%= form_with model: @tweet, local: true do |f| %>
       <div class="form-group">
         <h3 class="text-primary">
