--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light  bg-info fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">MeL-booth</a>
+      <a class="navbar-brand" href="/">MeL-booth</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,11 +34,6 @@
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
             <div class="d-flex">
-            <li class="nav-item mx-2">
-                <button type="button" class="btn btn-outline-light bg-light">
-                  <%= link_to  "トップに戻る", root_path %>
-                </button>
-              </li>
               <li class="nav-item mx-2">
                 <button type="button" class="btn btn-outline-light bg-light">
                   <%= link_to  "マイページ", user_path(current_user) %>
