--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="contents row">
   <div class="jumbotron bg-light">
-    <%= form_with(url:"/tweets/#{@tweet.id}", :method => :patch,local: true) do |f| %>
+    <%= form_with model: @tweet, method: :patch,local: true do |f| %>
       <div class="form-group">
         <h3 class="text-primary">
           編集する
         </h3>
       </div>
       <div class="form-group">
-        <%= f.text_field :image,placeholder: "Image Url", type:"text", name:"image", autofocus: "true" %>
+        <%= f.text_field :image,placeholder: "Image URL", type:"text", name:"image", autofocus: "true" %>
       </div>
       <div class="form-group">
         <%= f.text_area :text,placeholder: "text",name: "text", style: {cols: 30, rows: 10} %>
