--- a/app/views/tweets/create.html.erb
+++ b/app/views/tweets/create.html.erb
@@ -1,10 +1,10 @@
 <div class="contents row">
   <div class="success">
     <div class="jumbotron bg-light">
-      <h3>
+      <h3 class="text-success">
         投稿が完了しました。
       </h3>
-      <a class="btn" href="/">投稿一覧へ戻る</a>
+      <a class="btn btn-primary" href="/">投稿一覧へ戻る</a>
     </div>
   </div>
 </div>
