--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,15 +1,15 @@
 <div class="contents row">
-  <div class="jumbotron border-primary" >
+  <div class="jumbotron border-primary bg-light w-30" >
     <%= form_with model: @tweet, local: true do |f| %>
       <div class="form-group">
         <h3 class="text-primary">
         新規投稿
         </h3>
         <div class="form-group">
-          <%= f.text_field :image, placeholder: 'image_url',type: 'text', name: 'image',value: '' %>
+          <%= f.text_field :image, placeholder: 'image_url',type: 'text',size: "20x5", name: 'image',value: '' %>
         </div>
         <div class="form-group">
-          <%= f.text_area :text, placeholder: "text",name: 'text', style: {cols: 30, rows: 10} %>
+          <%= f.text_area :text, placeholder: "text",name: 'text', size: "20x5",style: {cols: 30, rows: 10} %>
         </div>
 
         <%= f.submit "送信", class: 'text-light btn btn-primary btn-lg' %>
