--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="contents row">
-  <div class="jumbotron bg-light">
+  <div class="jumbotron bg-light w-25">
     <%= form_with model: @tweet, method: :patch,local: true do |f| %>
       <div class="form-group">
         <h3 class="text-primary">
@@ -7,10 +7,10 @@
         </h3>
       </div>
       <div class="form-group">
-        <%= f.text_field :image,placeholder: "Image URL", type:"text", name:"image", autofocus: "true" %>
+        <%= f.text_field :image,placeholder: "Image URL", type:"text", name:"image", size: "20x5",autofocus: "true" %>
       </div>
       <div class="form-group">
-        <%= f.text_area :text,placeholder: "text",name: "text", style: {cols: 30, rows: 10} %>
+        <%= f.text_area :text,placeholder: "text",name: "text", size: "20x5",style: {cols: 30, rows: 10} %>
       </div>
       <%= f.submit "送信", class: 'text-light btn btn-primary btn-lg' %>
     <% end %>
