--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -3,27 +3,14 @@
 
 <body>
 
-  <div class="container">
-
-    <header class="jumbotron">
-      <h1 class="display-7">ようこそMeL-boothへ<br /></h1>
-      <p class="lead">商品にコメントよろしく〜</p>
+    <header class="jumbotron py-3">
+        <h3 class="display-6 text-primary">ようこそMeL-boothへ<br /></h3>
+        <p class="lead">コメントよろしく〜</p>
     </header>
 
       <div class="d-flex">
         <% @tweets.each do |tweet| %>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-              <div class="card-body">
-                <h4 class="card-title">商品</h4>
-                <p class="card-text">text</p>
-              </div>
-              <div class="card-footer">
-                <a href="" class="btn btn-primary">詳細</a>
-              </div>
-            </div>
-          </div>
+          <%= render partial: "tweet", locals: { tweet: tweet } %>
         <% end %>
       </div>
       <nav aria-label=" ">
@@ -33,7 +20,6 @@
           </li>
         </ul>
       </nav>
-  </div>
 
 </body>
 
