--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,17 @@
 <div class="contents row" >
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
+  <div class="jumbotron w-100">
       <h2 class="text-success"><%= @nickname %>さんの投稿一覧</h2>
       <div class="d-flex">
         <% @tweets.each do |tweet| %>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <div class="card h-100">
-              <div class="content_post text-center float-left " style="background-image: url(<%= tweet.image %>);">
-                <%= simple_format(tweet.text) %>
+          <div class="card h-100 card-img-top">
+              <div class="jumbotron w-100 mt-0 mb-2" style="background: url(<%= tweet.image %>); background-size: cover;">
+              </div>
+              <div class="card-body p-0">
+                <div class="card-title">
+                  <h3 class="lead"><%= simple_format(tweet.text) %></h3>
+                </div>
               </div>
             </div>
-          </div>
         <% end %>
       </div>
       <ul class="pagination">
@@ -18,6 +19,5 @@
           <%= will_paginate @tweets, render: BootstrapPagination::Rails, :previous_label => ' &lt 前へ', :next_label => '次へ &gt' %>
         </li>
       </ul>
-    </div>
   </div>
 </div>
