--- a/app/views/tweets/create.html.erb
+++ b/app/views/tweets/create.html.erb
@@ -1,5 +1,5 @@
 <div class="contents row">
-  <div class="success">
+  <div class="success mx-auto">
     <div class="jumbotron bg-light">
       <h3 class="text-success">
         投稿が完了しました。
