--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
 
         <div class="form-group">
           <%= f.label :nickname %> <em>(6 characters maximum)</em><br />
-          <%= f.text_field :nickname, autofocus: true, maxlength: "6" %>
+          <%= f.text_field :nickname, autofocus: true, maxlength: "20" %>
         </div>
 
         <div class="form-group">
@@ -30,7 +30,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "Sign up" %>
+          <%= f.submit "Sign up", class: 'text-light btn btn-primary btn-lg' %>
         </div>
       <% end %>
     </div>
