--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="contents row">
-  <div class="jumbotron bg-light w-25">
+  <div class="jumbotron bg-light mx-auto">
     <%= form_with model: @tweet, method: :patch,local: true do |f| %>
       <div class="form-group">
         <h3 class="text-primary">
