--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,11 +2,11 @@
 <html lang="js">
 
 <body>
-  <header class="jumbotron py-3">
-    <h3 class="display-6 text-primary">
+  <header class="jumbotron jumbotron-extend py-3">
+    <h3 class="display-6 text-white">
       ようこそMeL-boothへ<br />
     </h3>
-    <p class="lead">
+    <p class="lead text-white">
       コメントよろしく〜
     </p>
   </header>
