--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -30,3 +30,17 @@ img {
   max-width: 1000px;
   *zoom: 1;
 }
+
+.jumbotron-extend {
+  position: relative;
+  height: 50%;
+  min-height: 200px;
+  background: url(galaxy.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+footer{
+  margin-bottom: 0;
+  width: 100%;
+  position: fixed;
+}
