--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -2,6 +2,7 @@
   <div class="jumbotron d-flex ml-2 w-75 h-auto">
     <div class="card mb-1" style="background: url(<%= @tweet.image %>); background-size: cover;">
     </div>
+    <% if user_signed_in? && current_user.id == @tweet.user_id %>
       <div class="more w-50 h-auto">
         <div class="card-body">
           <h5 class="card-title">
@@ -13,28 +14,26 @@
           </a>
         </p>
         </div>
-        <% if user_signed_in? && current_user.id == @tweet.user_id %>
-          <ul class="more_list pl-3">
-            <li class="btn btn-primary">
-              <%= link_to '編集', "/tweets/#{@tweet.id}/edit",style:"color:white;", method: :get %>
-            </li>
-            <li class="btn btn-primary">
-              <%= link_to '削除', "/tweets/#{@tweet.id}", style:"color:white;",method: :delete %>
-            </li>
-          </ul>
-        <% end %>
+        <ul class="more_list pl-3">
+          <li class="btn btn-primary">
+            <%= link_to '編集', "/tweets/#{@tweet.id}/edit",style:"color:white;", method: :get %>
+          </li>
+          <li class="btn btn-primary">
+            <%= link_to '削除', "/tweets/#{@tweet.id}", style:"color:white;",method: :delete %>
+          </li>
+        </ul>
       </div>
+    <% end %>
   </div>
   <div class="container">
-    <div class="jumbotron bg-light py-3 mt-4 float-left d-flex">
-      <% if user_signed_in? && current_user.id == @tweet.user_id %>
+    <% if current_user %>
+      <div class="jumbotron bg-light py-3 mt-4 float-left d-flex">
         <%= form_with(url:"/tweets/#{@tweet.id}/comments",locar: true) do |f| %>
           <div class="form-group">
             <%= f.text_area :text,placeholder: "コメントする", name: "text",size: "20x5", style: {cols: 30, rows: 10} %>
           </div>
           <%= f.submit "送信" ,class: 'text-light btn btn-primary btn-lg' %>
         <% end %>
-      <% end %>
       <div class="ml-4">
         <div class="comments">
           <h4>＜コメント一覧＞</h4>
@@ -48,6 +47,6 @@
           <% end %>
         </div>
       </div>
-    </div>
+    <% end %>
   </div>
 </div>
